--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,6 +15,7 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
+monitor=eDP-1,preferred,auto,1.33
 monitor=DP-5,2560x1440@165,0x720,auto
 monitor=DP-1,2560x1440@165,2560x0,auto,transform, 1
 
