--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,6 +45,7 @@ exec-once = nm-applet
 #exec-once = waybar & hyprpaper & hypridle
 exec-once = waybar 
 exec-once = hypridle
+exec-once = mako
 
 
 #############################
