--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -31,6 +31,11 @@ bind = $mainMod SHIFT, right, movewindow, r
 bind = $mainMod SHIFT, up, movewindow, u
 bind = $mainMod SHIFT, down, movewindow, d
 
+bind = $mainMod CTRL, left, resizeactive, -20 0
+bind = $mainMod CTRL, right, resizeactive, 20 0
+bind = $mainMod CTRL, up, resizeactive, 0 -20
+bind = $mainMod CTRL, down, resizeactive, 0 20
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
