--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,9 +15,14 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
+#monitor=eDP-1,preferred,auto,1.33
+#monitor=DP-5,2560x1440@165,0x720,auto
+#monitor=DP-1,2560x1440@165,2560x0,auto,transform,1
+
+workspace= name:1, DP-1
 monitor=eDP-1,preferred,auto,1.33
-monitor=DP-5,2560x1440@165,0x720,auto
-monitor=DP-1,2560x1440@165,2560x0,auto,transform, 1
+monitor=DP-1,highrr,0x720,1
+monitor=DP-5,highrr,2560x0,1,transform,1
 
 
 ###################
@@ -42,10 +47,12 @@ $browser = firefox
 
 # exec-once = $terminal
 exec-once = nm-applet 
-#exec-once = waybar & hyprpaper & hypridle
 exec-once = waybar 
 exec-once = hypridle
 exec-once = mako
+exec-once = waypaper --random
+#exec-once = hyprpaper
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 
 #############################
@@ -54,8 +61,16 @@ exec-once = mako
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
-#env = XCURSOR_SIZE,24
-#env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,24
+env = WLR_RENDERE,vulkan
+env = WLR_NO_HARDWARE_CURSOR,1
+env = WLR_DRM_NO_ATOMI,1
+env = LIBVA_DRIVER_NAM,iHD
+env = VDPAU_DRIVE,va_gl
+env = MOZ_ENABLE_WAYLAN,1
+env = XDG_SESSION_TYP,wayland
+env = XDG_CURRENT_DESKTO,Hyprland
 #env = LIBVA_DRIVER_NAME,nvidia
 #env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 #env = QT_QPA_PLATFORM,wayland
@@ -131,7 +146,8 @@ decoration {
 
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
+        #enabled = true
         size = 3
         passes = 1
 
@@ -141,7 +157,7 @@ decoration {
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = true
 
     # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
     #        NAME,           X0,   Y0,   X1,   Y1
@@ -195,6 +211,8 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
+    vfr = no
+    vrr = 0
     disable_autoreload = true
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
