--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,5 +1,7 @@
 default-cache-ttl 3600
-max-cache-ttl 3600
+max-cache-ttl 7200
 pinentry-program /usr/bin/pinentry-tty
 enable-ssh-support
+allow-loopback-pinentry
 #pinentry-program /usr/bin/pinentry-gtk
+#allow-preset-passphrase
