--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,8 +21,8 @@
 
 workspace= name:1, DP-1
 monitor=eDP-1,preferred,auto,1.33
-monitor=DP-1,highrr,0x720,1
-monitor=DP-5,highrr,2560x0,1,transform,1
+monitor=DP-1,highrr,1440x640,1
+monitor=DP-5,highrr,0x0,1,transform,3
 
 
 ###################
@@ -228,7 +228,7 @@ input {
     kb_layout = us,ru
     kb_variant =
     kb_model =
-    kb_options = grp:alt_space_toggle
+    kb_options = grp:ctrl_space_toggle
     kb_rules =
 
     follow_mouse = 1
